--- a/scripts/blob_detection.ipynb
+++ b/scripts/blob_detection.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "from ccount import *\n",
-    "from os import environ"
+    "from os import environ\n",
+    "\n",
+    "#todo: faster list comprehension of cropping"
    ]
   },
   {
@@ -18,10 +20,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# you can adjust these parameters to suit your data\n",
     "# for run.sh\n",
