--- a/scripts/filter_merge.ipynb
+++ b/scripts/filter_merge.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"ForLabeling.area_calculation\""
+    "name = \"test\""
    ]
   },
   {
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "i = 0\n",
-    "for fname in glob.iglob('ForLabeling/*.npy.gz'):\n",
+    "for fname in glob.iglob('./ForLabeling/*.npy.gz'):\n",
     "    i+=1\n",
     "    print(i, fname)\n",
     "    if (i== 1):\n",
@@ -118,10 +118,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Filter by yes/no"
+    "# Filter by yes/no\n",
+    "yes_blobs = show_rand_crops(crops, label_filter=1, plot_area=True, num_shown=10)"
    ]
   },
   {
@@ -130,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# yes_blobs = show_rand_crops(crops, label_filter=1, plot_area=False, num_shown=3)"
+    "no_blobs = show_rand_crops(crops, label_filter=0, plot_area=True, num_shown=10)"
    ]
   },
   {
@@ -139,7 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# no_blobs = show_rand_crops(crops, label_filter=0, plot_area=False, num_shown=3)"
+    "print(\"yes blobs\", yes_blobs.shape)\n",
+    "print(\"no blobs\", no_blobs.shape)"
    ]
   },
   {
@@ -148,107 +152,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(\"yes blobs\", yes_blobs.shape)\n",
-    "# print(\"no blobs\", no_blobs.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Area Calculation\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "no_blobs = crops\n",
-    "Images, Labels, Rs = parse_blobs(no_blobs)\n",
-    "areas = [area_calculation(image, r=Rs[ind], plotting=False) for ind, image in enumerate(Images)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(areas, 40)\n",
-    "plt.title(\"Blob area in pixcels\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = [(x > 0 and x <500) for x in areas]\n",
-    "small_blobs = no_blobs[idx,:]\n",
-    "print(len(small_blobs))\n",
-    "_ = show_rand_crops(small_blobs, plot_area=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = [(x > 500 and x <1500) for x in areas]\n",
-    "mid_blobs = no_blobs[idx,:]\n",
-    "print(len(mid_blobs))\n",
-    "_ = show_rand_crops(mid_blobs, plot_area=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = [(x > 1500 and x < 3000) for x in areas]\n",
-    "large_blobs = no_blobs[idx,:]\n",
-    "print(len(large_blobs))\n",
-    "_ = show_rand_crops(large_blobs, plot_area=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = [(x > 3000) for x in areas]\n",
-    "huge_blobs = no_blobs[idx,:]\n",
-    "print(len(huge_blobs))\n",
-    "_ = show_rand_crops(huge_blobs, plot_area=True)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Save"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# size = 1800\n",
-    "# # idx_yes = np.random.choice(range(len(yes_blobs)), size, replace=False)\n",
-    "# # yes_blobs_sample = yes_blobs[idx_yes, :]\n",
-    "# yes_blobs[:, 3] = -1  # remove labels\n",
+    "size = 200\n",
+    "idx_yes = np.random.choice(range(len(yes_blobs)), 200, replace=False)\n",
+    "yes_blobs_sample = yes_blobs[idx_yes, :]\n",
     "\n",
-    "# idx_no = np.random.choice(range(len(large)), size, replace=False)\n",
-    "# no_blobs_sample = no_blobs[idx_no, :]"
+    "idx_no = np.random.choice(range(len(no_blobs)), 1800, replace=False)\n",
+    "no_blobs_sample = no_blobs[idx_no, :]"
    ]
   },
   {
@@ -257,10 +166,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # print(yes_blobs_sample.shape)\n",
-    "# print(no_blobs_sample.shape)\n",
-    "# # np.save(name + \".Daniel1.yes.npy\", yes_blobs_sample)\n",
-    "# np.save(name + \".npy\", no_blobs_sample)"
+    "print(yes_blobs_sample.shape)\n",
+    "print(no_blobs_sample.shape)\n",
+    "np.save(name + \".Daniel1.yes.npy\", yes_blobs_sample)\n",
+    "np.save(name + \".Daniel1.no.npy\", no_blobs_sample)"
    ]
   },
   {
@@ -269,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !gzip -f *npy"
+    "!gzip -f *npy"
    ]
   },
   {
@@ -278,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!jupyter nbconvert --to html filter_merge.area_calculation.ipynb"
+    "!jupyter nbconvert --to html filter_merge.ipynb"
    ]
   },
   {
@@ -290,8 +199,8 @@
     "html_name = name + \".filter_merge.html\"\n",
     "nb_name = name + '.filter_merge.ipynb'\n",
     "!echo $html_name $nb_name\n",
-    "!cp filter_merge.area_calculation.html $html_name\n",
-    "!cp filter_merge.area_calculation.ipynb $nb_name"
+    "!cp filter_merge.html $html_name\n",
+    "!cp filter_merge.ipynb $nb_name"
    ]
   },
   {
