fullsize effective jpg conversion

--- a/scripts/czi2png.ipynb
+++ b/scripts/czi2png.ipynb
@@ -11,7 +11,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "import re"
+    "import re\n",
+    "import matplotlib"
    ]
   },
   {
@@ -26,13 +27,13 @@
     "    fname = environ['fname']  # for runipy\n",
     "else:\n",
     "    # for notebook running\n",
-    "    fname = '../../ccount_data/E2F4_CFUe_14JUN19_stitching/Beta_CFUe_1-Stitching-07.czi'\n",
+    "    fname = '../../ccount_data/Ashley_Epo_DRC_31JAN20/No_Epo_1_1st_scan_Stitched.czi'\n",
     "print('fname:', fname)\n",
     "\n",
     "\n",
     "outname = os.path.basename(fname)\n",
-    "out_img_fname = re.sub('.czi$', '.png', outname)\n",
-    "equ_img_fname = re.sub('.czi$', '.equ.png', outname)\n",
+    "out_img_fname = re.sub('.czi$', '.jpg', outname)\n",
+    "equ_img_fname = re.sub('.czi$', '.equ.jpg', outname)\n",
     "print(\"out_img_fname\", out_img_fname)\n",
     "print(\"equ_img_fname\", equ_img_fname)"
    ]
@@ -44,8 +45,7 @@
    "outputs": [],
    "source": [
     "print(fname)\n",
-    "image = read_czi(fname, format=\"2019\")\n",
-    "dims = np.divide(image.shape, 128) # out jpg size: 256 big, 512 mid, 1024 small"
+    "image = read_czi(fname, format=\"2019\")"
    ]
   },
   {
@@ -54,9 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(dims[0],dims[1]))\n",
-    "plt.imshow(image, 'gray')\n",
-    "plt.savefig(out_img_fname)"
+    "matplotlib.image.imsave(out_img_fname, image, cmap = \"gray\")"
    ]
   },
   {
@@ -74,25 +72,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Visualizing equalization\")\n",
-    "plt.figure(figsize=(dims[0],dims[1]))\n",
-    "plt.imshow(image_equ, 'gray')\n",
-    "plt.savefig(equ_img_fname)"
+    "matplotlib.image.imsave(equ_img_fname, image_equ, cmap = \"gray\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "py36",
    "language": "python",
-   "name": "tf"
+   "name": "py36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -104,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
