--- a/scripts/labeling/labeling.ipynb
+++ b/scripts/labeling/labeling.ipynb
@@ -6,17 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load libraries\n",
     "%matplotlib inline\n",
     "from ccount import *\n",
     "import matplotlib\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Parameters"
+    "import matplotlib.pyplot as plt\n",
+    "import subprocess"
    ]
   },
   {
@@ -25,7 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls *npy*"
+    "# show file names of all blobs that needs to be labeled\n",
+    "%ls ../blobs/*npy*"
    ]
   },
   {
@@ -34,19 +30,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls *labeled*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Please change\n",
-    "in_name = 'xxx.npy.gz'\n",
+    "## first time running\n",
+    "# Select input file to work on\n",
+    "# Please change to your split of labeling tasks, by copy and paste from above\n",
+    "# e.g. ../blobs/bm.a.npy.gz, ../blobs/bm.benchmark1.npy.gz\n",
+    "# in_name = '../blobs/bm.benchmark1.npy.gz'  \n",
     "\n",
-    "# Please don't change unless have to\n",
+    "## Second time running, start from partially labeled files\n",
+    "in_name = 'bm.benchmark1.rui.demo.labeled.npy.gz'\n",
+    "\n",
+    "## output file name, please don't over-write important files\n",
+    "out_name = 'bm.benchmark1.rui.demo.labeled.npy.gz' # file name to be saved in, will over-write existing files\n",
+    "\n",
+    "\n",
+    "# Please don't change\n",
     "block_height = 2048 \n",
     "block_width = 2048 # pixcels\n",
     "\n",
@@ -55,53 +52,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Load Pre-build crops (cropped images of blobs)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load\n",
+    "# load the blob npy.gz file selected\n",
     "image_flat_crops = load_blobs_db(in_name)\n",
     "w = int(sqrt(image_flat_crops.shape[1]-6)) # padding width & cropped img width/2"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Histogram of blob size"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r_ = image_flat_crops[:,2]\n",
-    " \n",
-    "f, (ax1, ax2) = plt.subplots(1,2, figsize=(14, 7), sharey=False)\n",
-    "ax1.hist(r_, 40)\n",
-    "ax1.semilogy()\n",
-    "ax1.set_title(\"Histogram of blob size (log10 scale)\")\n",
-    "ax2.hist(r_, 40)\n",
-    "ax2.set_title(\"Histogram of blob size\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "show_rand_crops(crops=image_flat_crops, label_filter='na', num_shown=5)"
+    "# you can run this block many times, to get an overview of blobs, before your first labeling\n",
+    "# show randome blobs out of the input file\n",
+    "_ = show_rand_crops(crops=image_flat_crops, label_filter='na', num_shown=3)"
    ]
   },
   {
@@ -133,30 +102,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save\n",
-    "outname_labeled = input (\"please input file name to save labeled data(e.g. {})\\nto exit without saving 'e':\".format(\"xxx.labeled.npy\"))\n",
-    "if outname_labeled == 'e':\n",
-    "    print('exit without saving')\n",
+    "# decide output name and save\n",
+    "s = input (\"would you like to save/over-write {} ? (y/n)\".format(out_name))\n",
+    "if s == 'y':\n",
+    "    out_name2 = out_name.replace(\".gz\", \"\")\n",
+    "    np.save(out_name2, image_flat_crops)  \n",
+    "    subprocess.run(\"gzip -f \" + out_name2, shell=True, check=True)\n",
+    "    print('saved into', out_name)\n",
+    "    blobs_stat(image_flat_crops)\n",
     "else:\n",
-    "    np.save(outname_labeled.strip(), image_flat_crops)  \n",
-    "    print('saved into', outname_labeled.strip())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash -s \"$outname_labeled\"\n",
-    "gzip -f -1 $1"
+    "    print('exit without saving')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Review Labeled DB"
+    "# Review Labeled DB (Optional)"
    ]
   },
   {
@@ -165,8 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labeled = load_blobs_db(outname_labeled.strip()+'.gz')\n",
-    "#labeled = image_flat_crops"
+    "labeled = load_blobs_db(out_name)"
    ]
   },
   {
@@ -176,7 +137,7 @@
    "outputs": [],
    "source": [
     "## labeled as YES\n",
-    "show_rand_crops(crops=labeled, label_filter=1, num_shown=5)"
+    "_ = show_rand_crops(crops=labeled, label_filter=1, num_shown=3)"
    ]
   },
   {
@@ -186,7 +147,7 @@
    "outputs": [],
    "source": [
     "## labeled as NO\n",
-    "show_rand_crops(crops=labeled, label_filter=0, num_shown=5)"
+    "_ = show_rand_crops(crops=labeled, label_filter=0, num_shown=3)"
    ]
   },
   {
@@ -195,8 +156,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## labeled as undistinguishable\n",
-    "show_rand_crops(crops=labeled, label_filter=-2, num_shown=5)"
+    "## labeled as artifacts\n",
+    "_ = show_rand_crops(crops=labeled, label_filter=9, num_shown=3)"
    ]
   },
   {
@@ -205,22 +166,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## any label\n",
-    "show_rand_crops(crops=labeled, label_filter='na', num_shown=2)"
+    "## any label (Optional)\n",
+    "# _ = show_rand_crops(crops=labeled, label_filter='na', num_shown=3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Unsupervised classification (overview of blobs)"
+    "## Unsupervised classification (overview of blobs) (Optional)"
    ]
   },
   {
@@ -250,8 +204,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## save this file in html format\n",
-    "!jupyter nbconvert --to html labeling.ipynb"
+    "%ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Please click 'save' on the upper left if you want to save this notebook\n",
+    "# you can also save_as into a different notebook"
    ]
   },
   {
@@ -264,9 +227,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py35",
+   "display_name": "py36",
    "language": "python",
-   "name": "py35"
+   "name": "py36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -278,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
