--- a/scripts/labeling/merge.downsample.area_calcu.view.save.ipynb
+++ b/scripts/labeling/merge.downsample.area_calcu.view.save.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import random\n",
-    "Path(\"blobs\").mkdir(parents=True, exist_ok=True)\n",
+    "# Path(\"blobs\").mkdir(parents=True, exist_ok=True)\n",
     "Path(\"split_blobs\").mkdir(parents=True, exist_ok=True)\n",
     "Path(\"report\").mkdir(parents=True, exist_ok=True)"
    ]
@@ -274,17 +274,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save all in 500 split\n",
+    "# Save all in split\n",
     "import string\n",
     "\n",
-    "bsize = int(500)\n",
-    "m = out_blobs.shape[0]//500\n",
-    "m = min(m, 26) # max to z\n",
+    "bsize = int(250)\n",
+    "m = out_blobs.shape[0]//bsize\n",
+    "m = min(m, 52) # max to z\n",
     "print(m, \"files\")\n",
     "\n",
     "for i in range(0, m):\n",
     "    idx_ = range(i*bsize, bsize*(i+1))\n",
-    "    mark = list(string.ascii_lowercase)[i]\n",
+    "    mark = list(string.ascii_uppercase + string.ascii_lowercase)[i]\n",
     "    oname = \"split_blobs/\" + name + \".\" + mark + \".npy\"\n",
     "    print(oname , min(idx_), max(idx_))\n",
     "    _ = out_blobs[idx_, :]\n",
