fixed output name list bug A and a not co-existing

--- a/scripts/labeling/merge.downsample.area_calcu.view.save.ipynb
+++ b/scripts/labeling/merge.downsample.area_calcu.view.save.ipynb
@@ -279,16 +279,21 @@
     "\n",
     "bsize = int(250)\n",
     "m = out_blobs.shape[0]//bsize\n",
-    "m = min(m, 52) # max to z\n",
+    "m = min(m, 495) # from a1 to e99\n",
     "print(m, \"files\")\n",
+    "\n",
+    "A = list(string.ascii_lowercase)[0:5]\n",
+    "B = range(1, 100)\n",
+    "L=[[a+str(b) for a in A] for b in B]\n",
+    "MARK = [x for l in L for x in l]\n",
+    "\n",
     "\n",
     "for i in range(0, m):\n",
     "    idx_ = range(i*bsize, bsize*(i+1))\n",
-    "    mark = list(string.ascii_uppercase + string.ascii_lowercase)[i]\n",
+    "    mark = MARK[i]\n",
     "    oname = \"split_blobs/\" + name + \".\" + mark + \".npy\"\n",
     "    print(oname , min(idx_), max(idx_))\n",
     "    _ = out_blobs[idx_, :]\n",
-    "    #np.save(oname, _)\n",
     "    save_blobs_db(_, oname)"
    ]
   },
