re-organized res folder

--- a/scripts/viewing_blobs.ipynb
+++ b/scripts/viewing_blobs.ipynb
@@ -2,27 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "from ccount import *\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "from os import environ"
+    "from os import environ\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "if environ.get('fname') is not None:\n",
     "    in_name = environ['fname']  # for runipy\n",
     "else:\n",
-    "    in_name = \"0.05_Epo_Yes_IL17A_3_Stitched.pred.npy.gz\" # for notebook\n",
+    "    in_name = \"blobs/E2f4_CFUe_KO_1-Stitching-01.npy.gz\" # for notebook\n",
+    "    \n",
+    "if environ.get('dir') is not None:\n",
+    "    os.chdir(environ['dir'])\n",
+    "else:\n",
+    "    pass\n",
+    "\n",
+    "path = os.getcwd()\n",
+    "print(path)\n",
     "\n",
     "out_name = in_name.replace(\"npy.gz\", \"html\")\n",
     "print(in_name, \"->\", out_name)\n",
@@ -37,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,16 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#show_rand_crops(crops=image_flat_crops, label_filter=\"na\", num_shown=5)"
+    "show_rand_crops(crops=image_flat_crops, label_filter=\"na\", num_shown=15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,25 +127,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## save this file in html format\n",
-    "!jupyter nbconvert --to html viewing_blobs.ipynb\n",
-    "try:\n",
-    "    os.mkdir(\"html\")\n",
-    "except(FileExistsError):\n",
-    "    pass\n",
+    "# !jupyter nbconvert --to html viewing_blobs.ipynb\n",
+    "# try:\n",
+    "#     os.mkdir(\"html\")\n",
+    "# except(FileExistsError):\n",
+    "#     pass\n",
     "\n",
-    "if os.path.exists(\"html/\"+out_name):\n",
-    "    os.remove(\"html/\"+out_name)\n",
-    "os.rename(\"viewing_blobs.html\", \"html/\"+out_name)\n",
-    "print(\"saved into\", out_name)"
+    "# if os.path.exists(\"html/\"+out_name):\n",
+    "#     os.remove(\"html/\"+out_name)\n",
+    "# os.rename(\"viewing_blobs.html\", \"html/\"+out_name)\n",
+    "# print(\"saved into\", out_name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
