--- a/workflow/notebooks/viewing_blobs.ipynb
+++ b/workflow/notebooks/viewing_blobs.ipynb
@@ -279,9 +279,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tf",
    "language": "python",
-   "name": "python3"
+   "name": "tf"
   },
   "language_info": {
    "codemirror_mode": {
@@ -293,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
