labeling.ipynb: added description of label options

--- a/workflow/notebooks/labeling.ipynb
+++ b/workflow/notebooks/labeling.ipynb
@@ -147,6 +147,13 @@
    },
    "outputs": [],
    "source": [
+    "# label options: \n",
+    "# Yes: 1\n",
+    "# No: 0\n",
+    "# Uncertain: 3\n",
+    "# Artifacts: 4\n",
+    "# system reserved: 5 for unlabeled\n",
+    "\n",
     "crops = pop_label_flat_crops(crops, random = True, seed = 1, skip_labels = [0, 1])"
    ]
   },
