track a blob by size

--- a/workflow/notebooks/edge_detector_dev.ipynb
+++ b/workflow/notebooks/edge_detector_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,19 @@
     "import glob\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ccount.blob.io import load_crops\n",
+    "from ccount.blob.plot import show_rand_crops\n",
+    "from ccount.blob.misc import remove_edge_crops\n",
+    "import ccount.blob.misc\n",
+    "from ccount.blob.plot import flat2image"
    ]
   },
   {
@@ -32,19 +45,6 @@
    ],
    "source": [
     "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ccount.blob.io import load_crops\n",
-    "from ccount.blob.plot import show_rand_crops\n",
-    "from ccount.blob.misc import remove_edge_crops\n",
-    "import ccount.blob.misc\n",
-    "from ccount.blob.plot import flat2image"
    ]
   },
   {
@@ -72,10 +72,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0m\u001b[01;32m/home/socolovsky_lab/ccount/dev2021/training_data/Ashley_8_7_20/res/blob_crops/point125unitsEpo_2-Stitching-18.0.crops.npy.gz\u001b[0m\u001b[K*\r\n",
-      "\u001b[01;32m/home/socolovsky_lab/ccount/dev2021/training_data/Ashley_8_7_20/res/blob_crops/point125unitsEpo_2-Stitching-18.1.crops.npy.gz\u001b[0m\u001b[K*\r\n",
-      "\u001b[01;32m/home/socolovsky_lab/ccount/dev2021/training_data/Ashley_8_7_20/res/blob_crops/point125unitsEpo_2-Stitching-18.2.crops.npy.gz\u001b[0m\u001b[K*\r\n",
-      "\u001b[01;32m/home/socolovsky_lab/ccount/dev2021/training_data/Ashley_8_7_20/res/blob_crops/point125unitsEpo_2-Stitching-18.3.crops.npy.gz\u001b[0m\u001b[K*\r\n"
+      "\u001b[0m\u001b[01;32m/home/socolovsky_lab/ccount/dev2021/training_data/Ashley_8_7_20/res/blob_crops/point125unitsEpo_2-Stitching-18.0.crops.npy.gz\u001b[0m\u001b[K*\n",
+      "\u001b[01;32m/home/socolovsky_lab/ccount/dev2021/training_data/Ashley_8_7_20/res/blob_crops/point125unitsEpo_2-Stitching-18.1.crops.npy.gz\u001b[0m\u001b[K*\n",
+      "\u001b[01;32m/home/socolovsky_lab/ccount/dev2021/training_data/Ashley_8_7_20/res/blob_crops/point125unitsEpo_2-Stitching-18.2.crops.npy.gz\u001b[0m\u001b[K*\n",
+      "\u001b[01;32m/home/socolovsky_lab/ccount/dev2021/training_data/Ashley_8_7_20/res/blob_crops/point125unitsEpo_2-Stitching-18.3.crops.npy.gz\u001b[0m\u001b[K*\n"
      ]
     }
    ],
@@ -86,7 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -861,5 +863,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
