--- a/workflow/notebooks/viewing_blobs.ipynb
+++ b/workflow/notebooks/viewing_blobs.ipynb
@@ -279,9 +279,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "mamba",
    "language": "python",
-   "name": "tf"
+   "name": "mamba"
   },
   "language_info": {
    "codemirror_mode": {
@@ -293,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
