y,x,r,L: [y, x, r, label, area, place_holder, flattened cropped_blob_img (crop_width^2)]

--- a/workflow/notebooks/labeling.ipynb
+++ b/workflow/notebooks/labeling.ipynb
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "locs = load_locs(loc_file)  # contains x,y,z in the first 3 columns\n",
+    "locs = load_locs(loc_file)  # contains y,x,r in the first 3 columns\n",
     "locs = locs[0:500, :]\n",
     "print('only top 500 blobs kept', locs.shape)"
    ]
